# CS60004-LAB3-RL

./: .gitignore  README.md  main.py  pyproject.toml
report/: log.md  report.md
report/latex/: main.tex
task_scripts/: benchmark.py  benchmark_2d_stats.py  common.py  eval_common.py  eval_math_density_sampling.py  llm.py  task0_ppo_loss.py  task1_dpo_train.py  task2_grpo_train.py  task4_inference.py
task_scripts/scripts/: extract_train_by_num_count.py  filter_benchmark_by_repeat_accuracy.py  run_0p6.sh  run_0p6b.sh  run_8b.sh  run_rollout.sh  split_dataset.py
