[project]
name = "cs60004-lab3-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "fastparquet>=2026.3.0",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "vllm>=0.18.0",
]
